# Roadload-Refactoring-Kata

./: README.md
cpp/: .gitignore  CMakeLists.txt
cpp/src/: CMakeLists.txt  roadload.c  roadload.h
cpp/tests/: CMakeLists.txt  main.cpp  printers.h  roadload_tests.calculateEnergyWithLoads.approved.txt  roadload_tests.cpp
csharp/: .gitignore  CO2Values.cs  Roadload.cs  RoadloadTest.CalculateCO2Values.approved.txt  RoadloadTest.cs  packages.config  roadload.csproj  roadload.sln
csharp/Properties/: AssemblyInfo.cs
csharp/Roadload/: Co2Calculator.cs  Co2Values.cs
csharp/Roadload.Tests/: Roadload.Tests.csproj  RoadloadTest.cs
java/: pom.xml
java/src/main/java/codingdojo/: CO2Calculator.java  CO2Values.java
java/src/test/java/codingdojo/: RoadloadTest.calculateCO2Values.approved.txt  RoadloadTest.java
